<resources>
    <string name="app_name">GroceryStoreApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="regName">First Name</string>
    <string name="regEmail">Email</string>
    <string name="regPWD">Password</string>
    <string name="signUpTxt">Sign Up</string>
    <string name="signuptxt">Already have an account?</string>
    <string name="signintxt">Sing In</string>
    <string name="signIntxt">Don\'t have account?</string>
    <string name="WelcomeTxt">Welcome</string>
    <string name="StoreTxt">to our store</string>
    <string name="StartBtn">Start</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">Offers</string>
    <string name="new_products">New Products</string>
    <string name="orders">My Orders</string>
    <string name="my_cart">My cart</string>
    <string name="search">Search for items here</string>
    <string name="popular_products">Popular products</string>
    <string name="view_all_products">View all</string>
    <string name="explore_products">Explore products</string>
    <string name="recommended">Recommended</string>
    <string name="description">Description</string>
    <string name="discount90">Discount 90% OFF</string>
    <string name="category_name">Category name</string>
    <string name="update">Update</string>
    <string name="sorry_there_is_no_new_products">Sorry there is no new products</string>
    <string name="your_cart_is_empty">Your cart is empty!</string>
    <string name="you_have_not_purchased_anything_yet">You have not purchased anything yet!</string>
    <string name="view_all_productss">View all products</string>
    <string name="desc">Our shop offers a variety of fresh milk products that are perfect for any dairy needs. Milk is a nutritious and versatile ingredient that can be used in a variety of recipes or enjoyed on its own. Our milk is sourced from local dairy farms and is available in a variety of types, including whole milk, skim milk, and 2% milk. We also carry milk from different animals, including cow, goat, and sheep milk. Our knowledgeable staff is always available to provide information and</string>
    <string name="add_to_cart">Add to cart</string>


</resources>