<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/apps"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/earnings"
            android:title="@string/offers" />
        <item
            android:id="@+id/nav_newProducts"
            android:icon="@drawable/confetti"
            android:title="@string/new_products" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/list"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/shop_cart"
            android:title="@string/my_cart" />
    </group>
</menu>