<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/regImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@mipmap/regbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintBaseline_toTopOf="parent" />
    <EditText
        android:id="@+id/signUpName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="@string/regName"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        android:inputType="text"
        android:layout_marginTop="30dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regImage"
        app:layout_constraintWidth_percent=".8"
        />
    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:drawableLeft="@drawable/envelope"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="@string/regEmail"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        android:inputType="textEmailAddress"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpName"
        app:layout_constraintWidth_percent=".8"
        android:layout_marginTop="15dp"
        />
    <EditText
        android:id="@+id/signUpPWD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:drawableLeft="@drawable/key"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="@string/regPWD"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmail"
        app:layout_constraintWidth_percent=".8"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/blueGreen4"
        android:backgroundTint="@color/blueGreen4"
        android:hint="@string/signUpTxt"
        android:padding="14dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:iconTint="#80ED99"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpPWD" />
    <TextView
        android:id="@+id/signUptxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signuptxt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn"
        app:layout_constraintVertical_bias=".2"/>

    <TextView
        android:id="@+id/signInLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/signintxt"
        android:textColor="@color/blueGreen3"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/signUptxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInLink"
        app:layout_constraintVertical_bias="0.1"
        android:scaleX=".5"
        android:scaleY=".5"
        />



</androidx.constraintlayout.widget.ConstraintLayout>