<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeScreenActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        >

        <TextView
            android:id="@+id/welcomeTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/WelcomeTxt"
            android:textAlignment="center"
            android:textColor="@color/blueGreen3"
            android:textSize="40dp" />
        <TextView
            android:id="@+id/storeTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/StoreTxt"
            android:textAlignment="center"
            android:textColor="@color/blueGreen3"
            android:textSize="40dp"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/shop" />

        <Button
            android:id="@+id/Startbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StartBtn"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal|center_vertical"
            />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>